test_src/compiler_errors/types/binary/AndFloatError2.b
class AndFloatError2 {
    void test() {
        println(42 & 14.0);
    }
}
